[package]
name = "breakpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = { version = "0.21.7", default-features = false }
flate2 = { version = "1.0.28", default-features = false, features = ["cloudflare_zlib"] }
glob = { version = "0.3.1", default-features = false }
hmac-sha512 = { version = "1.1.5", default-features = false }
json = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.24", default-features = false, features = ["default-tls", "blocking"] }
tar = { version = "0.4.40", default-features = false }
thiserror = { version = "1.0.57", default-features = false }
url = { version = "2.5.0", default-features = false }
