[package]
name = "breakpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.80", default-features = false, features = ["std"] }
base64 = { version = "0.21.7", default-features = false }
flate2 = { version = "1.0.28", default-features = false, features = ["cloudflare_zlib"] }
glob = { version = "0.3.1", default-features = false }
hmac-sha512 = { version = "1.1.5", default-features = false }
json = { version = "0.12.4", default-features = false }
reqwest = { version = "0.11.24", default-features = false, features = ["default-tls", "blocking"] }
swc_common = { version = "0.33.18", default-features = false, features = ["tty-emitter"] }
swc_ecma_ast = { version = "0.112.4", default-features = false }
swc_ecma_parser = { version = "0.143.5", default-features = false, features = ["typescript"] }
tar = { version = "0.4.40", default-features = false }
url = { version = "2.5.0", default-features = false }
